{
  "version": 4,
  "terraform_version": "1.2.2",
  "serial": 29,
  "lineage": "289ea2f8-b7b9-12cb-e505-7bc5520115ab",
  "resources": [
    {
      "module": "module.ec2-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app_server",
      "provider": "module.ec2-instance.provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.ec2-instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project-iac-sg",
      "provider": "module.ec2-instance.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "arn": null,
            "description": "MYIAC-Sec-Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-042d7f9206cbab1e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "IAC-Sec-Group",
            "name_prefix": null,
            "owner_id": null,
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": null,
            "timeouts": null,
            "vpc_id": "vpc-0c16e56da5d8c1c96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2-instance.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.ec2-instance.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:255485508318:internet-gateway/igw-0a61d6f1c3ec0d17d",
            "id": "igw-0a61d6f1c3ec0d17d",
            "owner_id": "255485508318",
            "tags": {
              "Name": "MysampleInstance"
            },
            "tags_all": {
              "Name": "MysampleInstance"
            },
            "vpc_id": "vpc-0c16e56da5d8c1c96"
          },
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_vpc.this",
            "module.ec2-instance.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.ec2-instance.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a61d6f1c3ec0d17d",
            "id": "r-rtb-06e08ee70cd7ac27b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06e08ee70cd7ac27b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_internet_gateway.this",
            "module.ec2-instance.module.vpc.aws_route_table.public",
            "module.ec2-instance.module.vpc.aws_vpc.this",
            "module.ec2-instance.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.ec2-instance.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:255485508318:route-table/rtb-00e8755840260c57b",
            "id": "rtb-00e8755840260c57b",
            "owner_id": "255485508318",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "MysampleInstance"
            },
            "tags_all": {
              "Name": "MysampleInstance"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c16e56da5d8c1c96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_vpc.this",
            "module.ec2-instance.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:255485508318:route-table/rtb-04ceb89cad6c7ead0",
            "id": "rtb-04ceb89cad6c7ead0",
            "owner_id": "255485508318",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "MysampleInstance"
            },
            "tags_all": {
              "Name": "MysampleInstance"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c16e56da5d8c1c96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_vpc.this",
            "module.ec2-instance.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:255485508318:route-table/rtb-0a26f85dd6e744f4b",
            "id": "rtb-0a26f85dd6e744f4b",
            "owner_id": "255485508318",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "MysampleInstance"
            },
            "tags_all": {
              "Name": "MysampleInstance"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c16e56da5d8c1c96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_vpc.this",
            "module.ec2-instance.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.ec2-instance.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:255485508318:route-table/rtb-06e08ee70cd7ac27b",
            "id": "rtb-06e08ee70cd7ac27b",
            "owner_id": "255485508318",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "MysampleInstance"
            },
            "tags_all": {
              "Name": "MysampleInstance"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c16e56da5d8c1c96"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_vpc.this",
            "module.ec2-instance.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "module.ec2-instance.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f011137d867d7561",
            "route_table_id": "rtb-00e8755840260c57b",
            "subnet_id": "subnet-0cb9b0b88b97d6a22"
          },
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_route_table.database",
            "module.ec2-instance.module.vpc.aws_route_table.private",
            "module.ec2-instance.module.vpc.aws_subnet.database",
            "module.ec2-instance.module.vpc.aws_vpc.this",
            "module.ec2-instance.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0391a95747c62c7",
            "route_table_id": "rtb-04ceb89cad6c7ead0",
            "subnet_id": "subnet-033763aa7628db7fa"
          },
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_route_table.database",
            "module.ec2-instance.module.vpc.aws_route_table.private",
            "module.ec2-instance.module.vpc.aws_subnet.database",
            "module.ec2-instance.module.vpc.aws_vpc.this",
            "module.ec2-instance.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0037d716a9622c799",
            "route_table_id": "rtb-0a26f85dd6e744f4b",
            "subnet_id": "subnet-0e70b17c60b41baf5"
          },
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_route_table.database",
            "module.ec2-instance.module.vpc.aws_route_table.private",
            "module.ec2-instance.module.vpc.aws_subnet.database",
            "module.ec2-instance.module.vpc.aws_vpc.this",
            "module.ec2-instance.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.ec2-instance.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d13c65b69747e123",
            "route_table_id": "rtb-00e8755840260c57b",
            "subnet_id": "subnet-062b56ff4fe8da1e5"
          },
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_route_table.private",
            "module.ec2-instance.module.vpc.aws_subnet.private",
            "module.ec2-instance.module.vpc.aws_vpc.this",
            "module.ec2-instance.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0130d784503162728",
            "route_table_id": "rtb-04ceb89cad6c7ead0",
            "subnet_id": "subnet-04449231dd4d50701"
          },
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_route_table.private",
            "module.ec2-instance.module.vpc.aws_subnet.private",
            "module.ec2-instance.module.vpc.aws_vpc.this",
            "module.ec2-instance.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcac5229cf7d3096",
            "route_table_id": "rtb-0a26f85dd6e744f4b",
            "subnet_id": "subnet-04b4aa17a54fe824a"
          },
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_route_table.private",
            "module.ec2-instance.module.vpc.aws_subnet.private",
            "module.ec2-instance.module.vpc.aws_vpc.this",
            "module.ec2-instance.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.ec2-instance.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062b878f23a6e8d90",
            "route_table_id": "rtb-06e08ee70cd7ac27b",
            "subnet_id": "subnet-0319eeb8b9ce10aab"
          },
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_route_table.public",
            "module.ec2-instance.module.vpc.aws_subnet.public",
            "module.ec2-instance.module.vpc.aws_vpc.this",
            "module.ec2-instance.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a46209e2418b086",
            "route_table_id": "rtb-06e08ee70cd7ac27b",
            "subnet_id": "subnet-08eede4bdaa281967"
          },
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_route_table.public",
            "module.ec2-instance.module.vpc.aws_subnet.public",
            "module.ec2-instance.module.vpc.aws_vpc.this",
            "module.ec2-instance.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0beef96755d0f474d",
            "route_table_id": "rtb-06e08ee70cd7ac27b",
            "subnet_id": "subnet-00450a5bb340b30db"
          },
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_route_table.public",
            "module.ec2-instance.module.vpc.aws_subnet.public",
            "module.ec2-instance.module.vpc.aws_vpc.this",
            "module.ec2-instance.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "module.ec2-instance.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:255485508318:subnet/subnet-0cb9b0b88b97d6a22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.99.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb9b0b88b97d6a22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "255485508318",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MysampleInstance"
            },
            "tags_all": {
              "Name": "MysampleInstance"
            },
            "vpc_id": "vpc-0c16e56da5d8c1c96"
          },
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_vpc.this",
            "module.ec2-instance.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:255485508318:subnet/subnet-033763aa7628db7fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.99.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-033763aa7628db7fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "255485508318",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MysampleInstance"
            },
            "tags_all": {
              "Name": "MysampleInstance"
            },
            "vpc_id": "vpc-0c16e56da5d8c1c96"
          },
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_vpc.this",
            "module.ec2-instance.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:255485508318:subnet/subnet-0e70b17c60b41baf5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.99.9.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e70b17c60b41baf5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "255485508318",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MysampleInstance"
            },
            "tags_all": {
              "Name": "MysampleInstance"
            },
            "vpc_id": "vpc-0c16e56da5d8c1c96"
          },
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_vpc.this",
            "module.ec2-instance.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.ec2-instance.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:255485508318:subnet/subnet-062b56ff4fe8da1e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.99.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-062b56ff4fe8da1e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "255485508318",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MysampleInstance"
            },
            "tags_all": {
              "Name": "MysampleInstance"
            },
            "vpc_id": "vpc-0c16e56da5d8c1c96"
          },
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_vpc.this",
            "module.ec2-instance.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:255485508318:subnet/subnet-04449231dd4d50701",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.99.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04449231dd4d50701",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "255485508318",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MysampleInstance"
            },
            "tags_all": {
              "Name": "MysampleInstance"
            },
            "vpc_id": "vpc-0c16e56da5d8c1c96"
          },
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_vpc.this",
            "module.ec2-instance.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:255485508318:subnet/subnet-04b4aa17a54fe824a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.99.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b4aa17a54fe824a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "255485508318",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MysampleInstance"
            },
            "tags_all": {
              "Name": "MysampleInstance"
            },
            "vpc_id": "vpc-0c16e56da5d8c1c96"
          },
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_vpc.this",
            "module.ec2-instance.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.ec2-instance.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:255485508318:subnet/subnet-0319eeb8b9ce10aab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.99.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0319eeb8b9ce10aab",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "255485508318",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MysampleInstance"
            },
            "tags_all": {
              "Name": "MysampleInstance"
            },
            "vpc_id": "vpc-0c16e56da5d8c1c96"
          },
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_vpc.this",
            "module.ec2-instance.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:255485508318:subnet/subnet-08eede4bdaa281967",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.99.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08eede4bdaa281967",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "255485508318",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MysampleInstance"
            },
            "tags_all": {
              "Name": "MysampleInstance"
            },
            "vpc_id": "vpc-0c16e56da5d8c1c96"
          },
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_vpc.this",
            "module.ec2-instance.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:255485508318:subnet/subnet-00450a5bb340b30db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.99.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00450a5bb340b30db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "255485508318",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "MysampleInstance"
            },
            "tags_all": {
              "Name": "MysampleInstance"
            },
            "vpc_id": "vpc-0c16e56da5d8c1c96"
          },
          "dependencies": [
            "module.ec2-instance.module.vpc.aws_vpc.this",
            "module.ec2-instance.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.ec2-instance.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:255485508318:vpc/vpc-0c16e56da5d8c1c96",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.99.0.0/18",
            "default_network_acl_id": "acl-0d5dd972ebc4506ac",
            "default_route_table_id": "rtb-02c763771a494fd5b",
            "default_security_group_id": "sg-0e45a4953083c1f0b",
            "dhcp_options_id": "dopt-0634258e2102c1f63",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0c16e56da5d8c1c96",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02c763771a494fd5b",
            "owner_id": "255485508318",
            "tags": {
              "Name": "MysampleInstance"
            },
            "tags_all": {
              "Name": "MysampleInstance"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}